Tidied example up, added better description

--- a/Walkthrough 1.ipynb
+++ b/Walkthrough 1.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Databaker - Intro, part 1\n",
     "\n",
-    "Michael Adams, 04/05/2017"
+    "Michael Adams, 04/05/2017\n",
+    "\n",
+    "A simple introduction to the databaker python library using a very basic hand crafted spreadsheet.\n",
+    "\n",
+    "Please note that this notebook is intended as an introduction to help explain what databaker is and what it can do rather than a complete showcase of capability (if there's interest I'll build more examples for that).\n"
    ]
   },
   {
@@ -16,17 +20,23 @@
     "\n",
     "## What is Databaker?\n",
     "\n",
-    "Databaker is a python library for 'baking' irregular structured data (in the form of hand crafted spreadsheets) into well structured datasets.\n",
-    "\n",
-    "* note - by 'well structured' we're talking data thats easily queried by machines, nothing more.\n",
+    "Databaker is a python library for 'baking' irregularly formatted data (in the form of hand crafted spreadsheets) into strictly dimensioned machine readable datasets.\n",
     "\n",
     "The image below show some data (coloured in yellow) both in a spreadsheet and after the databaker process.\n",
     "\n",
-    "![alt text](images/duel.png)\n",
+    "---\n",
     "\n",
-    "Take a moment and compare the two. You can see in the output (lower) picture how the relationship between the observations (the counts, values etc being measured) and their dimensions (which explain WHAT we're measuring) is obvious and clearly structured. This makes it machine readable.\n",
+    "![alt text](images/both.png)\n",
     "\n",
-    "In the upper picture (the hand crafted spreadsheet) these relationships are abstract and represented visually, this sort of abstact is of limited to no use to a computerised data system.\n"
+    "---\n",
+    "\n",
+    "Take a moment and compare the two. You can see in the output (lower) picture how the relationship between the observations (the counts, values etc being measured) and their dimensions (which explain WHAT we're measuring) is obvious and clearly defined. This helps make it machine readable.\n",
+    "\n",
+    "In the upper picture (the hand crafted spreadsheet) these relationships are abstracted and represented visually, this sort of abstact is of limited use to a computerised data system.\n",
+    "\n",
+    "A key thing to understand at this point is that databaker recipes (i.e scripts) are repeat use. If you were to add additional groups to the above spreadsheet the recipe would still run and would accomodate the extra data seemlessly.\n",
+    "\n",
+    "In ONS context, if you add another month, quarter or year onto a spreadsheet no code modification would be required to databake it.\n"
    ]
   },
   {
@@ -370,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -379,9 +389,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading databakerExample.xlsx which has size 9932 bytes\n",
+      "Loading databakerExample.xlsx which has size 10098 bytes\n",
       "Table names: ['Groups']\n",
-      "writing 1 conversion segments into C:\\Users\\Admin\\Google Drive\\V3s for Alison\\Labour Market\\ExampleDatabakerOutput.csv\n",
+      "writing 1 conversion segments into C:\\Databaker_Walkthrough_1\\ExampleDatabakerOutput.csv\n",
       "conversionwrite segment size 24 table 'Groups'; \n"
      ]
     }
@@ -406,13 +416,15 @@
     "# for each of the selected tabs....do everything thats indented (in this case we only have 1 tab, but that isn't common so we'll stick with the typical approach)\n",
     "for tab in tabs:       \n",
     "\n",
-    "    # select groups of cells\n",
-    "    observations = tab.excel_ref('C5').expand(DOWN).expand(RIGHT).is_not_blank()\n",
+    "    # define a selection of cells as the observations\n",
+    "    obs = tab.excel_ref('C5').expand(DOWN).expand(RIGHT).is_not_blank()\n",
+    "    \n",
+    "    # define other selections of cells to be our dimensions\n",
     "    assets = tab.excel_ref('C3').expand(RIGHT).is_not_blank()\n",
     "    names = tab.excel_ref('B5').expand(DOWN).is_not_blank()\n",
     "    group = tab.excel_ref('A5').expand(DOWN).is_not_blank()\n",
     "\n",
-    "    # define the relationships between selected cells\n",
+    "    # define the relationships of the cells selected as dimensions (relative to the observations)\n",
     "    dimensions = [\n",
     "              HDim(assets, \"Assets\", DIRECTLY, ABOVE), \n",
     "              HDim(names, \"Name\", DIRECTLY, LEFT), \n",
@@ -420,9 +432,10 @@
     "                 ]\n",
     "    \n",
     "    # Now we process these relationship for this tab (this code never changes)\n",
-    "    conversionsegment = ConversionSegment(tab, dimensions, observations) # < --- processing\n",
+    "    conversionsegment = ConversionSegment(tab, dimensions, obs) # < --- processing\n",
     "    conversionsegments.append(conversionsegment) # <-- adding result of processing this tab to our list\n",
     "    \n",
+    "\n",
     "\n",
     "# print it all to csv (this code never changes)\n",
     "writetechnicalCSV(outputfile, conversionsegments)\n"
@@ -433,8 +446,22 @@
    "metadata": {},
    "source": [
     "\n",
-    "and that's it :D"
+    "# Input and Output\n",
+    "\n",
+    "Here's the data before and after.\n",
+    "\n",
+    "---\n",
+    "![alt text](images/source.png)\n",
+    "---\n",
+    "![alt text](images/output.png)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": []
   },
   {
    "cell_type": "code",
@@ -447,8 +474,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
