Last minute cleanup

--- a/Walkthrough 1.ipynb
+++ b/Walkthrough 1.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "A simple introduction to the databaker python library using a very basic hand crafted spreadsheet.\n",
     "\n",
-    "Please note that this notebook is intended as an introduction to help explain what databaker is and what it can do rather than a complete showcase of capability (if there's interest I'll build more examples for that).\n"
+    "This notebook is intended as an introduction to help explain what databaker is and what it can do rather than a complete showcase of capability (if there's interest I'll build more examples for that).\n",
+    "\n",
+    "Please note - I'm going to make heavy use of excel images to explain concepts in this walkthrough, but databaker is purely a python library so you will not use excel  at all in practice (or even need it installed).\n"
    ]
   },
   {
@@ -69,7 +71,7 @@
    "source": [
     "# First - the data\n",
     "\n",
-    "We'll use the example spreadsheet show below. Its from a tab called \"Groups\" in a spreadsheet names \"databakerExamples.xlsx\".\n",
+    "We'll use the example spreadsheet show below. Its from a tab called \"Groups\" in a spreadsheet named \"databakerExamples.xlsx\".\n",
     "\n",
     "![alt text](images/source.png)\n",
     "\n"
@@ -118,8 +120,8 @@
     "outputfile ='ExampleDatabakerOutput.csv'\n",
     "\n",
     "# load the tabs we want\n",
-    "tabs_we_want = ['Groups']\n",
-    "tabs = loadxlstabs(inputfile, tabs_we_want)\n"
+    "tabsWeWant = ['Groups']\n",
+    "tabs = loadxlstabs(inputfile, tabsWeWant)\n"
    ]
   },
   {
@@ -128,7 +130,7 @@
    "source": [
     "## 2.) Select and group the cells.\n",
     "\n",
-    "Databaker uses \"extended dot notation\" for selecting cells. Basically, you start with a selection of data and each additional dot and command modifies that selection somehow.\n",
+    "Databaker uses dot notation for selecting cells. Basically, you start with a selection of data and each additional .command modifies that selection somehow.\n",
     "\n",
     "In other words - each line is a sequence of commands executed one after the other.\n",
     "\n",
@@ -138,7 +140,7 @@
     "\n",
     "![alt text](images/line1.png)\n",
     "\n",
-    "We're now going to walk through this string of dot notation commands. We'll adress each .command in turn, highlighting which \"cells\" are selected as each command executes.\n"
+    "We're now going to walk through this line of commands. We'll adress each .command in turn, highlighting which \"cells\" are selected as each command executes.\n"
    ]
   },
   {
@@ -337,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's looks at this in context of out coloured images.\n",
+    "Let's looks at this in context of our coloured images.\n",
     "\n",
     "The key thing is to remember the mustard/yellow colour are the observations and all dimensions are defined relative to them.\n",
     "    \n",
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -406,8 +408,8 @@
     "outputfile ='ExampleDatabakerOutput.csv'\n",
     "\n",
     "# load the tabs we want\n",
-    "tabs_we_want = ['Groups']\n",
-    "tabs = loadxlstabs(inputfile, tabs_we_want)\n",
+    "tabsWeWant = ['Groups']\n",
+    "tabs = loadxlstabs(inputfile, tabsWeWant)\n",
     "\n",
     "\n",
     "# define a list. this is mandatory - for later\n",
@@ -417,7 +419,7 @@
     "for tab in tabs:       \n",
     "\n",
     "    # define a selection of cells as the observations\n",
-    "    obs = tab.excel_ref('C5').expand(DOWN).expand(RIGHT).is_not_blank()\n",
+    "    observations = tab.excel_ref('C5').expand(DOWN).expand(RIGHT).is_not_blank()\n",
     "    \n",
     "    # define other selections of cells to be our dimensions\n",
     "    assets = tab.excel_ref('C3').expand(RIGHT).is_not_blank()\n",
@@ -432,11 +434,9 @@
     "                 ]\n",
     "    \n",
     "    # Now we process these relationship for this tab (this code never changes)\n",
-    "    conversionsegment = ConversionSegment(tab, dimensions, obs) # < --- processing\n",
+    "    conversionsegment = ConversionSegment(tab, dimensions, observations) # < --- processing\n",
     "    conversionsegments.append(conversionsegment) # <-- adding result of processing this tab to our list\n",
     "    \n",
-    "\n",
-    "\n",
     "# print it all to csv (this code never changes)\n",
     "writetechnicalCSV(outputfile, conversionsegments)\n"
    ]
@@ -455,22 +455,6 @@
     "---\n",
     "![alt text](images/output.png)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
