--- a/Walkthrough 1.ipynb
+++ b/Walkthrough 1.ipynb
@@ -19,6 +19,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "EDIT - I've added the simple output format used in these example to the following repo:\n",
+    "https://github.com/ONS-OpenData/simple_Databaker_Output_Structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## What is Databaker?\n",
     "\n",
@@ -460,7 +468,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
